# rpg_api/models/loot.py
@@ -4,6 +4,7 @@ from rpg_api.models.item import Item
 
 class Loot(Item):
     type = peewee.IntegerField()
+    image_url = peewee.TextField()
 
     def __unicode__(self):
         return self.name
