# rpg_api/swagger/swagger.yaml
@@ -1,6 +1,5 @@
 openapi: 3.0.0
 servers:
-# Added by API Auto Mocking Plugin
 - url: https://localhost:8080
   description: Local server 
 info:
@@ -68,7 +67,37 @@ paths:
           '400':
             description: bad input parameter
         x-openapi-router-controller: rpg_api.controllers.inventory_controller
-      
+  /open_lootbox/{user}/{slot}:
+    post:
+      tags:
+        - Action
+      summary: Open lootbox from user wich is at slot
+      operationId: open_lootbox
+      description: |
+        Open the lootbox from user wich is at slot in inventory
+      parameters:
+        - in: path
+          name: user
+          description: the username of the user
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: slot
+          description: the slot of the lootbox
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Loots
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inventory'
+        '400':
+          description: bad input parameter
+      x-openapi-router-controller: rpg_api.controllers.lootbox_controller
 components:
   schemas:
     balance:
@@ -89,6 +118,8 @@ components:
       properties:
         name: 
           type: string
+        price:
+          type: number
         slot:
           type: integer
         rarety:
@@ -105,6 +136,8 @@ components:
           type: string
         slot:
           type: integer
+        image_url:
+          type: string
         type:
           type: object
           properties:
